--- a/CovidHelp/appsettings.json
+++ b/CovidHelp/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CovidDbConnection": "Server=51.75.73.112;Database=covid;User=covid;Password=bK74SoFnd"
+  }
 }
