--- a/CovidHelp/CovidHelp.csproj
+++ b/CovidHelp/CovidHelp.csproj
@@ -13,9 +13,16 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
   </ItemGroup>
 
 
 
+  <ItemGroup>
+    <Folder Include="Views\Offer\" />
+    <Folder Include="Models\Offer\" />
+    <Folder Include="Models\User\" />
+  </ItemGroup>
 </Project>
